--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -167,8 +167,8 @@ jobs:
           value: gitopstesting.jfrog.io/gitops-docker/python-app:${{github.run_number}}
           commitChange: true
           updateFile: true
-          targetBranch: dev
-          branch: dev
+          targetBranch: main
+          branch: main
           token: ${{ secrets.TOKEN }}
       - name: Create ticket in jira
         id: create_jira_ticket
